# C-Code

./: .gitmodules  Aflevering1.c  Aflevering1.h  Aflevering2.c  Aflevering2.h  CMakeListTEMP.txt  CMakeLists.txt  README.md  Walkthrough.md  main.c  printingPatterns.h
CMakeProjects/miniproject2/: CMakeLists.txt
CMakeProjects/miniproject2/src/: game_of_lines.c  game_of_lines.h  miniproject2.h  play_game.c  winnerFile.c
CMakeProjects/miniproject2/test/: test_game_of_lines.c
CMakeProjects/miniproject3/: CMakeLists.txt
CMakeProjects/miniproject3/src/: CMakeLists.txt  hashtable.c  hashtables.h  kampe-2024-2025.txt  kampe-2025-2026.txt  miniproject3.h  project3.c
CMakeProjects/miniproject3/test/: CMakeLists.txt
CMakeProjects/project1/: CMakeLists.txt  main.c  main.h
CMakeProjects/project1/lib/: calculator.h  project1.h
CMakeProjects/project1/src/: calculator.c  test.c
CMakeProjects/project2/: main.c
CMakeProjects/project2/lib/: game_of_lines.h  project2.h
CMakeProjects/project2/src/: game_of_lines.c
leetcode/: AddTwoNumbers.c  LongSubstringWithoutRepeat.c  LowestCommonAncestor.c  MinimumNumberofOperations.c  TwoNumbers.c  maximum_subarray.c  ransomNotes.c  romanToInt.c
lib/: Aflevering3.h  EC_hashtables.h  aflevering3-funcs.h  cashier.h  exampleExam.h  hashtable.h  lecture1.h  lecture10.h  lecture12.h  lecture13.h  lecture2.h  lecture3.h  lecture4.h  lecture7.h  lecture9.h  leetcode.h  mergesort.h  miniproject1.h  nlognfac.h  qsort.h  searchCompare.h  sqrt.h  sudoSolver.h  swapNum.h
src/: Aflevering1.c  Aflevering2.c  Aflevering2.h  Aflevering3.c  aflevering3-funcs.c  cashier.c  exampleExam.c  externalChaning-hashtables.c  lecture1.c  lecture10.c  lecture12.c  lecture13.c  lecture2.c  lecture3.c  lecture4.c  lecture7.c  lecture9.c  lommeregner.c  lommeregner.h  mergesort.c  miniproject1.c  nlognfac.c  nlognfac.h  openAddressing-hashtables.c  printingPatterns.c  qsort.c  searchCompare.c  sqrt.c  stensakspapir.c  stensakspapir.h  sudoSolver.c  swapNum.c
